# VulkanRendererCPP

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  imgui.ini  test_debugger.sublime-project  test_debugger.sublime-workspace
docs/: man-glslang.txt
include/: VKRenderer.hpp
lib/ccstructs/: CMakeLists.txt  README.md  TMP_map_fixed.c  TMP_map_fixed.h  cc_allocator.c  cc_allocator.h  cc_hash.c  cc_hash.h  cc_logger.h  cc_map.c  cc_map.h  cc_profiler.c  cc_profiler.h  cc_profiler_win.c  lookup3.c
lib/glm/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/stb/include/: stb_image_resize2.h
lib/tinyobj/: tiny_obj_loader.h
projects/AssetBaker/include/: AssetManager.hpp
projects/AssetBaker/src/: AssetManager.cpp  dds.hpp  main.cpp  vk_enum_string_helper.h
projects/VKRenderer_lib/include/: VKRenderer.hpp
projects/VKRenderer_lib/src/: VKRenderer.cpp  VulkanUtils.h
projects/VKRenderer_lib/src/assets/: AssetManager.cpp  AssetManager.hpp
projects/VKRenderer_lib/src/core/: DebugPipeline.cpp  DebugPipeline.hpp  Device.cpp  Device.hpp  DrawCall.cpp  DrawCall.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  Pipeline.cpp  Pipeline.hpp  PipelineInstance.cpp  PipelineInstance.hpp  RenderContext.cpp  RenderContext.hpp  RenderFrame.cpp  RenderFrame.hpp  RenderPass.cpp  RenderPass.hpp  Swapchain.cpp  Texture.hpp  VertexData.h
projects/VKRenderer_lib/src/utils/: DearImGui.cpp  DearImGui.hpp
projects/VKRenderer_lib/src/window/: Input.hpp  WIndow_win32.cpp  Window.hpp
res/: cmdlet_shader_watcher.ps1  compile_shaders.sh
res/shaders/: base.frag.spv  base.vert.spv  debug.frag.spv  debug.vert.spv  fx_shader.frag.spv  fx_shader_fullscreen.vert  fx_shader_fullscreen.vert.spv  indirect.frag.spv  indirect.vert.spv  outline.vert.spv  pbr.frag.spv  pbr.vert.spv  shader_base.vert  shader_base.vert.spv  shader_debug.frag.spv  shader_debug.vert.spv  shader_indirect.vert  shader_indirect.vert.spv  shader_outline.frag.spv  shader_outline.vert  shader_outline.vert.spv  shader_trail.frag.spv  shader_trail.vert.spv  shader_unlit.frag.spv  skybox.frag.spv  skybox.vert.spv  trail.frag.spv  trail.vert.spv  unlit.frag.spv
res/shaders_include/: data_uniform.glsl  pbr_functions.glsl  shader_base.glsl  utils.glsl
res/shaders_src/: base.frag  base.vert  debug.vert  fx_shader.frag  fx_shader_fullscreen.vert  indirect.frag  pbr.frag  pbr.vert  shader_base.vert  shader_debug.frag  shader_debug.vert  shader_outline.vert  shader_trail.frag  shader_trail.vert  shader_unlit.frag  skybox.frag  skybox.vert  unlit.frag
src/: VKRenderer.cpp  VulkanUtils.h
src/assets/: AssetManager.cpp  AssetManager.hpp
src/core/: CommandPool.cpp  CommandPool.hpp  DataStructures.hpp  DebugPipeline.cpp  Device.cpp  Device.hpp  DrawCall.cpp  DrawCall.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  Pipeline_FX.cpp  Pipeline_FX.hpp  Queue.cpp  Queue.hpp  RenderContext.cpp  RenderContext.hpp  RenderFrame.cpp  RenderFrame.hpp  RenderPass.cpp  RenderPass.hpp  Swapchain.cpp  Swapchain.hpp  VertexData.h
src/utils/: DearImGui.cpp  DearImGui.hpp
src/window/: WIndow_win32.cpp  Window.hpp
tests/: main.cpp  pbr.cpp  trails.cpp  ui.cpp  union.cpp
tests_c/: basic_hashmap.c  hash_comparing.c  hashmap.cpp  hashmap_strings.cpp  integral.c  intrinsics.c  profile_profiler.c  profiling.c
